# dspy-kya

./: README.md  pyproject.toml
dspy_kya/: __init__.py  card.py  identity.py  middleware.py  trust_gate.py
dspy_kya.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_integration.py
